Refactor Carregar and CarregarAlloc to be more in-line with each other.